<resources>
    <string name="app_name">TapTour</string>
    <string name="loginWithEmailButton">Login with Email</string>
    <string name="registerButton">Register</string>
    <string name="usernameHintLogin">Username</string>
    <string name="passwordHintLogin">Password</string>
    <string name="loginButton">Login</string>
    <string name="asCompanyViewButton">As a Company</string>
    <string name="asIndividualViewButton">Individual</string>
    <string name="waitProgressDialogMessage">Please waiting...</string>
    <string name="title_activity_home">HomeActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_profile">Login or Register</string>
    <string name="nav_booking">Booking</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_signout">Sign out</string>
    <string name="title_toolbar_main">Tours</string>
    <string name="nav_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booknowButton">Book Now</string>
    <string name="tourDescriptionHeaderDetail">Tour Description</string>
    <string name="exampleDescription">Azerbaijan’s capital is known both for its UNESCO-listed Old Town and its striking contemporary architecture. On this tour, discover Baku’s history and heritage; admire landmarks including the Flame Towers, Shirvanshahlar Palace, and Maiden Tower; take in the views from Upside hill; and sample typical Azerbaijan cuisine.</string>
    <string name="toolbarTourDetailText">Tour Detail</string>
    <string name="intentFromTourToTourDetail">clickedTour</string>
    <string name="alertDialogForLoginTitle">Fail</string>
    <string name="loginWarningButtonText">Login</string>
    <string name="intentFromTourDetailToCompanyProfile">companyId</string>
    <string name="bookingSuccessText">Booking is Success</string>
    <string name="bookingFailText">Booking is Fail</string>
    <string name="alertDialogTitleForSignOut">Sign Out</string>
    <string name="alertDialogMessageForSignout">Do you really want to sign out?</string>
    <string name="alertDialogOkButtonForSignout">Yes</string>
    <string name="alertDialogCancelButtonForSignOut">Cancel</string>
</resources>
