<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/first" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/ic_profile">

        </item>
    </group>
    <group android:id="@+id/second" android:checkableBehavior="single">


    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home">

    </item>



    <item
        android:id="@+id/nav_booking"
        android:title="@string/nav_booking"
        android:icon="@drawable/ic_booking">

    </item>

    <item
        android:id="@+id/nav_favourites"
        android:title="@string/nav_favourites"
        android:icon="@drawable/ic_favourites">

    </item>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings">

    </item>

    <item
        android:id="@+id/nav_signout"
        android:title="@string/nav_signout"
        android:icon="@drawable/ic_signout">

    </item>


</group>
</menu>