<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="Login"

            android:textColor="@color/colorAccent"
            android:textSize="28dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameInputLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTextView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/usernameHintLogin"
            android:padding="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameInputEditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                 />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameInputLayoutLogin"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"

            android:hint="@string/passwordHintLogin"
            app:passwordToggleEnabled="true"
            android:padding="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordInputEditTextLogin"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:text="" />


        </android.support.design.widget.TextInputLayout>

        <info.hoang8f.widget.FButton
            android:id="@+id/loginButton"
            android:text="@string/loginButton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:textSize="22dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            app:fButtonColor="@color/colorAccent"
            app:shadowEnabled="true"
            app:cornerRadius="5dp"
            android:shadowColor="@android:color/black"
            android:layout_below="@+id/passwordInputLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>